<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity3">

    <include layout="@layout/homebutton" />

    <ScrollView
        android:layout_marginTop="70dp"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewFooter"

        android:layout_below="@+id/imageViewHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Fact1"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Fact2"
                android:textColor="#000000"
                android:textSize="24sp"
                android:layout_marginTop="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Fact3"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Fact4"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Fact5"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Fact6"
                android:textColor="#000000"
                android:textSize="24sp"
                android:layout_marginTop="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Fact7"
                android:textColor="#000000"
                android:textSize="24sp"
                android:layout_marginTop="10sp"/>

        </LinearLayout>
    </ScrollView>
</android.widget.RelativeLayout>