<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <include layout="@layout/homebutton" />

    <ScrollView
        android:layout_marginTop="70dp"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewFooter"

        android:layout_below="@+id/imageViewHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Puerto"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/born"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/Family"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/LikeToBe"
                android:textColor="#000000"
                android:textSize="24sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:gravity="center"
                android:background="#808080"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/current_location"
                android:textColor="#000000"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</android.widget.RelativeLayout>